--- a/docker/index.html
+++ b/docker/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>DIGEST</title>
+    <title>DIGEST-Web</title>
     <link rel="icon" href="/static/favicon.ico">
 </head>
 <body>
