--- a/docker/index.html
+++ b/docker/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>DIGEST-Web</title>
-    <link rel="icon" href="/static/favicon.ico">
+    <link rel="icon" href="/static/favicon.png">
 </head>
 <body>
 <div id="app"></div>
