--- a/docker/index.html
+++ b/docker/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>DIGEST-Web</title>
-    <meta property="og:title" content="Digest-Web - In silico validation of disease and gene sets, clusterings, or subnetworks.">
+    <meta property="og:title" content="Digest-Web">
     <meta property="og:type" content="website">
+    <meta property="og:description" content="In silico validation of disease and gene sets, clusterings, or subnetworks.">
     <meta property="og:image" content="https://digest-validation.net/static/assets/digest_summary_illustration.png">
     <meta property="og:url" content="https://digest-validation.net/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
