--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="utf-8">
     <title>DIGEST-Web</title>
-    <meta property="og:title" content="Digest-Web">
+
+    <meta name="description" content="In silico validation of disease and gene sets, clusterings, or subnetworks.">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://digest-validation.net/">
     <meta property="og:type" content="website">
+    <meta property="og:title" content="Digest-Web">
     <meta property="og:description" content="In silico validation of disease and gene sets, clusterings, or subnetworks.">
     <meta property="og:image" content="https://digest-validation.net/static/assets/digest_summary_illustration.png">
-    <meta property="og:url" content="https://digest-validation.net/">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="digest-validation.net">
+    <meta property="twitter:url" content="https://digest-validation.net/">
+    <meta name="twitter:title" content="Digest-Web">
+    <meta name="twitter:description" content="In silico validation of disease and gene sets, clusterings, or subnetworks.">
+    <meta name="twitter:image" content="https://digest-validation.net/static/assets/digest_summary_illustration.png">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/static/favicon.png">
