--- a/docker/index.html
+++ b/docker/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
     <meta charset="utf-8">
     <title>DIGEST-Web</title>
     <meta name="description" content="In silico validation of disease and gene sets, clusterings, or subnetworks.">
