--- a/docker/index.html
+++ b/docker/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>DIGEST-Web</title>
     <meta name="description" content="In silico validation of disease and gene sets, clusterings, or subnetworks.">
+    <meta name="keywords" content="digest, validation, in-silico validation, gene, disorder, disease, cluster, network medicine, significance, functional enrichment, genetic coherence">
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://digest-validation.net/">
     <meta property="og:type" content="website">
